# urop-mount-automation

./: .gitignore  pyproject.toml
CUAServoMirror/: README.md  blacs_tabs.py  blacs_workers.py  labscript_devices.py  register_classes.py  test_encoder_decoder.py
CUAServoMirror/standalone_mirror_code/SCServo_Python/: STS3215_200324.xlsx  read_write.py  sync_read_write.py
CUAServoMirror/standalone_mirror_code/fddebug-master/fddebug-master/: FD-v1.9.6(20200107)-EN-U.rar  README.md
main/: example_motor_controller_usage.py  example_oscilloscope_usage.py  main.py  motor_control.py  oscilloscope_display.py  oscilloscope_reader.py
